--- a/.env
+++ b/.env
@@ -35,3 +35,6 @@ DEFAULT_URI=http://localhost
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+GNEWS_API_KEY='e8f8d371b781b6c9709d72953ccfd38e'
+GNEWS_API_BASE_URL='https://gnews.io/api/v4'
